# 4809_FinalProject380

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  flash_32u4.sh  flash_4809.sh  restore_32u4.sh
32u4/: CMakeLists.txt  Queue.cpp  Queue.h  constants.h  main.c  main.cpp  serial.c  serial.cpp  serial.h  uno-wifi-rev2-32u4.cmake  usb.c  usb.cpp  usb.h
4809/: CMakeLists.txt  Queue.cpp  Queue.h  Serial.cpp  Serial.h  ascii_keycodes.h  constants.h  main.cpp  uno-wifi-rev2-4809.cmake
BTKBRemote/: settings.gradle
BTKBRemote/app/: build.gradle
BTKBRemote/app/src/androidTest/java/net/nametable/btkbremote/: ExampleInstrumentedTest.java
BTKBRemote/app/src/main/: AndroidManifest.xml
BTKBRemote/app/src/main/java/net/nametable/btkbremote/: FirstFragment.java  MainActivity.java
BTKBRemote/app/src/main/res/layout/: activity_main.xml  fragment_first.xml
BTKBRemote/app/src/main/res/menu/: menu_main.xml
BTKBRemote/app/src/main/res/navigation/: nav_graph.xml
BTKBRemote/app/src/main/res/values/: strings.xml  themes.xml
BTKBRemote/app/src/main/res/values-night/: themes.xml
BTKBRemote/app/src/test/java/net/nametable/btkbremote/: ExampleUnitTest.java
BTKBRemote/gradle/wrapper/: gradle-wrapper.properties
tests/: bluetooth_test.py  performance_data.csv  performance_stats.xlsx  performance_test.py
